test/verilog/neg/synth.v
/* Generated by Yosys 0.7+601 (git sha1 626b5552, clang 6.0.0 -fPIC -Os) */

(* src = "neg-test-0.v:2" *)
module example(clk, out);
  (* src = "neg-test-0.v:20" *)
  wire [3:0] _0_;
  (* src = "neg-test-0.v:14" *)
  wire [3:0] _1_;
  (* src = "neg-test-0.v:18" *)
  wire [31:0] _2_;
  (* src = "neg-test-0.v:3" *)
  input clk;
  (* src = "neg-test-0.v:7" *)
  wire fast;
  (* src = "neg-test-0.v:5" *)
  wire [3:0] in1;
  (* src = "neg-test-0.v:5" *)
  wire [3:0] in2;
  (* src = "neg-test-0.v:6" *)
  output [3:0] out;
  reg [3:0] out;
  (* src = "neg-test-0.v:8" *)
  reg [3:0] temp;
  assign _1_ = in1 + (* src = "neg-test-0.v:15" *) in2;
  assign fast = ! (* src = "neg-test-0.v:18" *) _2_;
  assign _2_ = in1 | (* src = "neg-test-0.v:18" *) in2;
  always @(posedge clk)
      out <= _0_;
  always @(posedge clk)
      temp <= _1_;
  assign _0_ = fast ? (* src = "neg-test-0.v:21" *) 4'h0 : temp;
endmodule
